--- a/tcejumpbox/tcejumpbox-init.yml
+++ b/tcejumpbox/tcejumpbox-init.yml
@@ -29,7 +29,7 @@ packages:
   - apt-transport-https
   - ca-certificates
   - curl
-  - gnupg-agent
+  - gnupg
   - openssh-server
   - software-properties-common
   - jq
